--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js'
     = javascript_include_tag '//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js'
+    = yield :head
 
     = yield :meta
     = csrf_meta_tags
