--- a/app/views/inject_responses/summary.html.haml
+++ b/app/views/inject_responses/summary.html.haml
@@ -40,13 +40,13 @@
       %tr.total
         %td{colspan: 4} Total Submitted
         %td.center
-          = user.inject_responses.pluck(:score).inject(:+) || 0
+          = user.inject_responses.pluck(:score).compact.inject(:+) || 0
           = " / "
           = user.inject_responses.collect{ |res| res.inject.max_score }.inject(:+) || 0
       %tr.total
         %td{colspan: 4} Total Overall
         %td.center
-          = user.inject_responses.pluck(:score).inject(:+) || 0
+          = user.inject_responses.pluck(:score).compact.inject(:+) || 0
           = " / "
           = @injects.pluck(:max_score).inject(:+) || 0
 
