--- a/app/views/injects/_form.html.haml
+++ b/app/views/injects/_form.html.haml
@@ -7,6 +7,7 @@
       .form-group
         = f.label :description
         = f.text_area :description, rows: 10, class: "form-control"
+        %span.description stored in markdown format
     .col-md-6
       .row
         .col-sm-6
