--- a/app/views/flag_categories/index.html.haml
+++ b/app/views/flag_categories/index.html.haml
@@ -1,6 +1,6 @@
 = header "Flag Categories", FlagCategory, icon: :flag, skip_button: true, button: link_to('New Flag Category', new_event_flag_category_path(@event), class: 'btn btn-success')
 
-%table.table.table-stripped
+%table.table.table-striped
   %thead
     %tr
       %th Name
