--- a/app/views/injects/_form.html.haml
+++ b/app/views/injects/_form.html.haml
@@ -6,7 +6,7 @@
         = f.text_field :title, placeholder: 'Title', class: "form-control"
       .form-group
         = f.label :description
-        = f.text_area :description, rows: 10, class: "form-control"
+        = f.text_area :description, rows: 10, class: "form-control", data: { provide: 'markdown', iconlibrary: 'fa' }
         %span.description stored in markdown format
     .col-md-6
       .row
