--- a/app/views/inject_responses/index.html.haml
+++ b/app/views/inject_responses/index.html.haml
@@ -37,7 +37,7 @@
                       %td.right
                         = link_to "Download", response.submission.url
                         |
-                        = object_actions response, skip_edit: true, skip_view: true
+                        = object_actions response, skip_edit: false, skip_view: true
   - @inject_responses.each do |response|
     %div{ class: 'modal fade', id: "score-modal-#{response.id}", "tabindex"=>"-1", "role"=>"dialog", "aria-labelledby"=>"", "aria-hidden"=>"true" }
       .vertical-alignment-helper
