optimize user / group relationship
utilizing eager loading and smashing n+1 queries

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -10,5 +10,5 @@
     - @groups.each do |group|
       %tr
         %td= group.name
-        %td= group.users.count
+        %td= @groups_count[group.id]
         %td.right= object_actions group
