--- a/app/views/guides/show.html.haml
+++ b/app/views/guides/show.html.haml
@@ -1,3 +1,3 @@
 = show_header 'Guide Details', @guide
 
-= link_to @guide.file_file_name, download_guide_path(@guide)
+= link_to @guide.file_file_name, download_guide_path(@guide), data: { turbolinks: false }
