--- a/app/views/inject_responses/show.html.haml
+++ b/app/views/inject_responses/show.html.haml
@@ -1,6 +1,6 @@
 = show_header 'Inject Response Details', @inject_response, parent_object: @inject
 
-= link_to @inject_response.submission_file_name, download_inject_inject_response_path(@inject, @inject_response)
+= link_to @inject_response.submission_file_name, download_inject_inject_response_path(@inject, @inject_response), data: { turbolinks: false }
 %br
 %br
 = link_to (text_icon(:chevron_circle_left)+'Inject'), @inject, class: 'btn btn-primary'
