change archive method to zip
for the time being this can be mis-leading as it only downloads a zip
and doesn’t “archive” any data

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -31,6 +31,6 @@
                 = object_actions [@event, inject], skip_destroy: true
                 - if can? :archive, Inject
                   |
-                  = link_to 'Archive', archive_inject_path(inject), data: { turbolinks: false }
+                  = link_to 'Zip', zip_inject_path(inject), data: { turbolinks: false }
     .col-md-6
       = render file: 'flag_categories/index'
