update image_tag reference for production issues

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,4 +2,4 @@
 %hr
 %p Please log in to continue
 .center
-  = image_tag "cyber_security", alt: 'http://cdn.meme.am/instances/57338354.jpg (Photo Find Credit: Kyle Walter)', width: 400
+  = image_tag "cyber_security.jpg", alt: 'http://cdn.meme.am/instances/57338354.jpg (Photo Find Credit: Kyle Walter)', width: 400
