--- a/app/views/dashboards/red_team.html.haml
+++ b/app/views/dashboards/red_team.html.haml
@@ -11,7 +11,8 @@
       - team.each do |service|
         - @success = (ServiceCheck.where(service_object_id: service.object_id).up.count.to_f/ServiceCheck.where(service_object_id: service.object_id).count.to_f)*100
         - @failure = (ServiceCheck.where(service_object_id: service.object_id).down.count.to_f/ServiceCheck.where(service_object_id: service.object_id).count.to_f)*100
-        %div.center.service{class: (ServiceCheck.where(service_object_id: service.object_id).last.up? ? 'up' : 'down')}
+        - @last = ServiceCheck.where(service_object_id: service.object_id).last
+        %div.center.service{class: (@last && @last.up? ? 'up' : 'down')}
           = service.name2
         .progress
           .progress-bar.progress-bar-success{style: "width: #{@success}%"}
